# GrothAdventureOfflineBookByClaudeCowork

./: .gitattributes  .gitignore  ARCHITECTURE.md  InitialRun.cmd  PRD.md  README.md  SETUP.md  Update.cmd  alembic.ini  pyproject.toml  run.cmd
.claude/: launch.json  settings.local.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/public/fonts/: README.txt
app/src/: App.tsx  main.tsx
app/src/book/: BookContext.tsx  staticData.ts
app/src/components/: NavBar.tsx  PhotoLightbox.tsx  PolaroidThumb.tsx  SearchOverlay.tsx  TagChip.tsx  TimelineCard.tsx  YearDrawer.tsx
app/src/fonts/: README.txt
app/src/pages/: Contents.tsx  Cover.tsx  Entry.tsx  Home.tsx  PageSpread.tsx  Search.tsx  Timeline.tsx
app/src/styles/: theme.css
config/: sources.yaml  tag_keywords.yaml
core/: cli.py  config.py  static_export.py
core/api/: app.py
core/api/routers/: book.py  entries.py  media.py  search.py  stats.py  tags.py
core/connectors/: wordpress.py
core/db/: models.py  session.py
core/db/migrations/: env.py
core/db/migrations/versions/: 0001_initial_schema.py
scripts/: assign_topics.py  monthly_update.ps1  monthly_update.sh
