[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groth-adventures-scrapbook"
version = "0.1.0"
description = "Groth Adventures Offline Scrapbook"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pillow>=10.0",
    "python-magic-bin>=0.4; sys_platform == 'win32'",
    "python-magic>=0.4; sys_platform != 'win32'",
    "exifread>=3.0",
    "protego>=0.3",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
    "aiofiles>=23",
    "python-multipart>=0.0.9",
]

[project.scripts]
scrapbook = "core.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["core"]
